k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-demo
spec:
  type: ClusterIP
  selector:
    app: aks-demo
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
